experimental/helm/charts/kubeflow-trainer/manifests/platform.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: jobset
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: jobset
    control-plane: controller-manager
  name: jobset-controller-manager-metrics-service
  namespace: kubeflow-system
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/instance: jobset
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: jobset
    control-plane: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: jobset
    app.kubernetes.io/instance: jobset
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: jobset
    app.kubernetes.io/part-of: jobset
  name: jobset-webhook-service
  namespace: kubeflow-system
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/instance: jobset
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: jobset
    control-plane: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  name: kubeflow-trainer-controller-manager
  namespace: kubeflow-system
spec:
  ports:
  - name: monitoring-port
    port: 8443
    targetPort: metrics
  - name: webhook-server
    port: 443
    protocol: TCP
    targetPort: webhook
  - name: status-server
    port: 10443
    protocol: TCP
    targetPort: status-server
  selector:
    app.kubernetes.io/component: manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/created-by: jobset
    app.kubernetes.io/instance: jobset
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: jobset
    app.kubernetes.io/part-of: jobset
    control-plane: controller-manager
  name: jobset-controller-manager
  namespace: kubeflow-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: jobset
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: jobset
      control-plane: controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
        traffic.sidecar.istio.io/excludeInboundPorts: '9443'
      labels:
        app.kubernetes.io/instance: jobset
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: jobset
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --config=/controller_manager_config.yaml
        - --zap-log-level=2
        command:
        - /manager
        image: registry.k8s.io/jobset/jobset:v0.11.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 8443
          name: metrics
          protocol: TCP
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /controller_manager_config.yaml
          name: manager-config
          subPath: controller_manager_config.yaml
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: jobset-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - configMap:
          name: jobset-manager-config
        name: manager-config
      - name: cert
        secret:
          defaultMode: 420
          secretName: jobset-webhook-server-cert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/name: trainer
    app.kubernetes.io/part-of: kubeflow
  name: kubeflow-trainer-controller-manager
  namespace: kubeflow-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: manager
      app.kubernetes.io/name: trainer
      app.kubernetes.io/part-of: kubeflow
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: '9443'
      labels:
        app.kubernetes.io/component: manager
        app.kubernetes.io/name: trainer
        app.kubernetes.io/part-of: kubeflow
    spec:
      containers:
      - args:
        - --config=/controller_manager_config.yaml
        - --zap-log-level=2
        image: ghcr.io/kubeflow/trainer/trainer-controller-manager:v2.2.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: health
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 3
        name: manager
        ports:
        - containerPort: 8081
          name: health
          protocol: TCP
        - containerPort: 8443
          name: metrics
          protocol: TCP
        - containerPort: 9443
          name: webhook
          protocol: TCP
        - containerPort: 10443
          name: status-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: health
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 3
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /controller_manager_config.yaml
          name: kubeflow-trainer-config
          readOnly: true
          subPath: controller_manager_config.yaml
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      serviceAccountName: kubeflow-trainer-controller-manager
      volumes:
      - configMap:
          name: kubeflow-trainer-config
        name: kubeflow-trainer-config
      - name: cert
        secret:
          defaultMode: 420
          secretName: kubeflow-trainer-webhook-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: defaulter.trainer.kubeflow.org
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kubeflow-trainer-controller-manager
      namespace: kubeflow-system
      path: /mutate-trainer-kubeflow-org-v1alpha1-trainjob
  failurePolicy: Fail
  name: defaulter.trainjob.trainer.kubeflow.org
  rules:
  - apiGroups:
    - trainer.kubeflow.org
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - trainjobs
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: jobset
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: jobset
  name: jobset-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: jobset-webhook-service
      namespace: kubeflow-system
      path: /mutate-jobset-x-k8s-io-v1alpha2-jobset
  failurePolicy: Fail
  name: mjobset.kb.io
  rules:
  - apiGroups:
    - jobset.x-k8s.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    resources:
    - jobsets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: jobset-webhook-service
      namespace: kubeflow-system
      path: /mutate--v1-pod
  failurePolicy: Fail
  name: mpod.kb.io
  objectSelector:
    matchExpressions:
    - key: jobset.sigs.k8s.io/jobset-name
      operator: Exists
  rules:
  - apiGroups:
    - ''
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: jobset
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: jobset
  name: jobset-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: jobset-webhook-service
      namespace: kubeflow-system
      path: /validate-jobset-x-k8s-io-v1alpha2-jobset
  failurePolicy: Fail
  name: vjobset.kb.io
  rules:
  - apiGroups:
    - jobset.x-k8s.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - jobsets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: jobset-webhook-service
      namespace: kubeflow-system
      path: /validate--v1-pod
  failurePolicy: Fail
  name: vpod.kb.io
  objectSelector:
    matchExpressions:
    - key: jobset.sigs.k8s.io/jobset-name
      operator: Exists
  rules:
  - apiGroups:
    - ''
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validator.trainer.kubeflow.org
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kubeflow-trainer-controller-manager
      namespace: kubeflow-system
      path: /validate-trainer-kubeflow-org-v1alpha1-clustertrainingruntime
  failurePolicy: Fail
  name: validator.clustertrainingruntime.trainer.kubeflow.org
  rules:
  - apiGroups:
    - trainer.kubeflow.org
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clustertrainingruntimes
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kubeflow-trainer-controller-manager
      namespace: kubeflow-system
      path: /validate-trainer-kubeflow-org-v1alpha1-trainingruntime
  failurePolicy: Fail
  name: validator.trainingruntime.trainer.kubeflow.org
  rules:
  - apiGroups:
    - trainer.kubeflow.org
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - trainingruntimes
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kubeflow-trainer-controller-manager
      namespace: kubeflow-system
      path: /validate-trainer-kubeflow-org-v1alpha1-trainjob
  failurePolicy: Fail
  name: validator.trainjob.trainer.kubeflow.org
  rules:
  - apiGroups:
    - trainer.kubeflow.org
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - trainjobs
  sideEffects: None
